# DishPatch

./: .gitignore  README.md  pyproject.toml
dishpatch/: config.py  config.yaml  graph.py  llms.py  logger.py  main.py  models.py  prompts.py
dishpatch/data/: menu.py  orders.py
dishpatch/nodes/: __init__.py  menu_agent.py  orchestrator.py  order_agent.py  synthesizer.py
dishpatch/prompts/: menu_agent.txt  orchestrator.txt  order_agent.txt
dishpatch/tools/: menu_tools.py  order_tools.py  rag.py
